packages/@winglang/wingc/src/jsify/snapshots/reference_from_static_inflight.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Code

```w

    let s = "hello";

    class MyType {
      static inflight staticMethod(): str {
        return s;
      }
    }
    
```

## inflight.MyType-1.cjs

```js
"use strict";
const $helpers = require("@winglang/sdk/lib/helpers");
const $macros = require("@winglang/sdk/lib/macros");
module.exports = function({ $s }) {
  class MyType {
    static async staticMethod() {
      return $s;
    }
  }
  return MyType;
}
//# sourceMappingURL=inflight.MyType-1.cjs.map
```

## preflight.cjs

```js
"use strict";
const $stdlib = require('@winglang/sdk');
const $macros = require("@winglang/sdk/lib/macros");
const $platforms = ((s) => !s ? [] : s.split(';'))(process.env.WING_PLATFORMS);
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
const $helpers = $stdlib.helpers;
const $extern = $helpers.createExternRequire(__dirname);
const $types = require("./types.cjs");
const $PlatformManager = new $stdlib.platform.PlatformManager({platformPaths: $platforms});
class $Root extends $stdlib.std.Resource {
  constructor($scope, $id) {
    super($scope, $id);
    $helpers.nodeof(this).root.$preflightTypesMap = { };
    let $preflightTypesMap = {};
    $helpers.nodeof(this).root.$preflightTypesMap = $preflightTypesMap;
    class MyType extends $stdlib.std.Resource {
      constructor($scope, $id, ) {
        super($scope, $id);
      }
      static _toInflightType() {
        return `
          require("${$helpers.normalPath(__dirname)}/inflight.MyType-1.cjs")({
            $s: ${$stdlib.core.liftObject(s)},
          })
        `;
      }
      get _liftMap() {
        return ({
          "$inflight_init": [
            [s, []],
          ],
        });
      }
      static get _liftTypeMap() {
        return ({
          "staticMethod": [
            [s, []],
          ],
        });
      }
    }
    const s = "hello";
  }
}
const $APP = $PlatformManager.createApp({ outdir: $outdir, name: "main", rootConstruct: $Root, isTestEnvironment: $wing_is_test, entrypointDir: process.env['WING_SOURCE_DIR'], rootId: process.env['WING_ROOT_ID'] });
$APP.synth();
//# sourceMappingURL=preflight.cjs.map
```

## types.cjs

```js
const std = require("@winglang/sdk").std;
const $types = {};
module.exports = $types;
```

